--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-  </head>  
-    <body>
+    <head>
         <style>
-          .error {
-              color: red
-                 }
-          .form {
-              padding: 8px;
-                }
-        </style>
-        <form class="form" method="post">
+                .error {
+                    color: red
+                       }
+                .form {
+                    padding: 8px;
+                      }
+              </style>
+    </head>  
+    <body>
+      
+        <form action="/info" class="form" method="post">
             <h2> Sign-up</h2>
             <label>Username
                 <input type = "text" name = "username" value ='{{username}}' />
@@ -29,11 +30,11 @@
             <p class="error">{{vpword_error}}</p>
             <br/>
             <label> Email (optional)
-                <input type = "email" name = "email" value ='{{email}}' />
+                <input type = "text" name = "email" value ='{{email}}' />
             </label>
             <p class="error">{{email_error}}</p>
             <br/>
-            <input type ="submit" /> 
+            <input type ="submit"/> 
         </form>
     </body>
 </html>
