reworking the code to get rid of error messages

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <body>
-    <h1>Welcome, {{username}}&#33</h1>
-  </body>
+<body>
+    <h1>Welcome, {{name}}&#33</h1>
+</body>
 </html> 
