--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -2,38 +2,33 @@
 <html>
 <head>
     <style>
-    .error {
-             color: red
-             }
-     .form {
-            padding: 8px;
-            }
+       .error {color: red;}
     </style>
-</head>  
+</head>
 <body>
-    <h2> Sign-up</h2>
-    <form class="form" method="post"></form>
-        <label>Username
-            <input type = "text" name = "username" value ='{{username}}' />
-        </label>
-        <p class="error">{{username_error}}</p>
-        <br/>
-        <label> Password
-            <input type = "password" name = "pword"  value ='{{pwrod}}' />
-        </label>
-        <p class="error">{{pword_error}}</p>
-        <br/>
-        <label>Verifiy Password
-            <input type = "password" name = "vpword" value ='{{vpword}}' />
-        </label>
-        <p class="error">{{vpword_error}}</p>
-        <br/>
-        <label> Email (optional)
-            <input type = "text" name = "email" value ='{{email}}' />
-        </label>
-        <p class="error">{{email_error}}</p>
-        <br/>
-        <input type ="submit"/> 
+    <h1>User Signup</h1>
+    <form method="post">
+      <label>Username
+        <input name="form_name" type="text" value={{form_name}}/>
+      </label>
+      <p class="error">{{form_name_error}}</p>
+      <br/>
+      <label>Password
+          <input name="pass_word" type="password" value={{pass_word}}/>
+      </label>
+      <p class="error">{{pass_word_error}}</p>
+      <br/>
+      <label> Password Verification
+          <input name="vp_word" type="password" value={{vp_word}}/>
+      </label>
+      <p class="error">{{vp_word_error}}</p>
+      <br/>
+      <label> Email(optional)
+          <input name="useremail" type="text" value={{useremail}}/>
+      </label>
+      <p class="error">{{useremail_error}}</p>
+      <br/>
+      <input type="submit" value="Signup"/>
     </form>
-</body>
+ </body>
 </html>
