added additional error codes

--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>User Signup</h1>
-    <form action="/userwelcome.html" method="post">
+    <form action="/signup" method="post">
       <label>Username
         <input name="form_name" type="text"/>
       </label>
