--- a/templates/userwelcome.html
+++ b/templates/userwelcome.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
 <body>
-    <h1>Welcome, {{form_name}} &#33</h1>
+    <h1>Welcome, {{username}} &#33</h1>
 </body>
 </html> 
